<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="10dp"
    card_view:cardUseCompatPadding="true"
    card_view:cardPreventCornerOverlap="true"
    android:id="@+id/pictureC">

    <ImageView
        android:id="@+id/card_Image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/space"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:background="@color/text">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tarjeta_2"
            android:layout_gravity="bottom"

            android:textColor="@color/colorTextCard"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_gravity="bottom"
            android:textColor="@color/colorTextCard"
            android:textSize="13sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like"
                android:layout_gravity="bottom"
                android:textColor="@color/colorTextCard"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:button="@drawable/heart_selector"
                />
            <TextView
                android:id="@+id/likeNumberCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likenumbercard_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/firstword_textsize_card"
                android:layout_marginLeft="@dimen/timecard_marginleft_card"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
